test/at_least_one_arg.cppo
(* A parameterized macro cannot have zero arguments. *)
#define FOO() "not ok"
